# vroom

./: .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
account/: admin.py  context_processors.py  models.py  serializers.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py  0002_alter_documentstorage_image.py  0003_alter_member_issue_date.py  0004_alter_member_class_passed_alter_member_full_name_and_more.py  0005_alter_member_email_alter_member_full_name_and_more.py
account/views/: home.py  user.py
djangoapp/: exception_handler.py  settings.py  urls.py
inventory/: admin.py  models.py  serializers.py  urls.py  views.py
inventory/management/commands/: bike_inventory_data.csv  seed_bike_inventory.py
inventory/migrations/: 0001_initial.py  0002_alter_addon_rate.py  0003_alter_bikeinventory_photo.py  0004_alter_bikeinventory_bike_class_and_more.py  0005_alter_rentallog_addons.py
static/CACHE/css/: output.50786ebee9a5.css  output.5dee6d2db920.css  output.6940629d212f.css  output.95f19761475d.css  output.bfcb2a7cb1d4.css  output.daba2c68567f.css  output.eb4550319a3c.css  output.ffbf29663278.css
static/src/: output.css
templates/: base.html  navbar.html  sidebar.html
templates/account/: create_member.html  login.html  member.html  signup.html
templates/inventory/: addon.html  bike_inventory.html  rental_log.html
